@@ -413,16 +413,18 @@ function insertTags(tagOpen, tagClose, sampleText) {
 function akeytt() {
 	if (typeof ta == "undefined" || !ta)
 		return;
-	pref = 'alt-';
+	var pref = 'alt-';
 	if (is_safari || navigator.userAgent.toLowerCase().indexOf('mac') + 1
 		|| navigator.userAgent.toLowerCase().indexOf('konqueror') + 1 )
 		pref = 'control-';
 	if (is_opera)
 		pref = 'shift-esc-';
 
-	for (id in ta) {
-		n = document.getElementById(id);
+	for (var id in ta) {
+		var n = document.getElementById(id);
 		if (n) {
+			var a = null;
+			var ak = '';
 			// Are we putting accesskey in it
 			if (ta[id][0].length > 0) {
 				// Is this object a object? If not assume it's the next child.
